feat: buildpacks and scripts added to app.json

--- a/app.json
+++ b/app.json
@@ -9,5 +9,13 @@
       "description": "Vendo backend url",
       "value": "https://vue-marketplace.vendo.dev/"
     }
-  }
+  },
+  "scripts": {
+    "postdeploy": "yarn build && yarn dev"
+  },
+  "buildpacks": [
+    {
+      "url": "heroku/nodejs"
+    }
+  ]
 }
